# functoolsplus

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
functoolsplus/: __init__.py  abc.py  hof.py
functoolsplus/collections/: __init__.py  base.py  lists.py  streams.py
functoolsplus/containers/: lazy.py  pipes.py
functoolsplus/utils/: implementations.py  singletons.py
requirements/: requirements-testing-base.txt  requirements-testing.txt
scripts/: run_pylint.sh
tests/: functions.py  strategies.py  test_hof.py
tests/collections/: test_single_linked_list.py  test_stream.py
tests/containers/: test_lazy.py  test_pipes.py
