[metadata]
description-file = README.md

[isort]
line_length=79
skip=examples, .venv, .tox
known_first_party=functoolsplus
multi_line_output=3

[flake8]
max-line-length = 79
exclude = examples, .venv, .tox

[pylint]
exclude = examples, .venv, .tox
ignore-docstrings = yes
disable=missing-docstring, bad-continuation, invalid-name, R, W, I, C

[tool:pytest]
addopts = --doctest-modules
testpaths =
    tests
    functoolsplus

[coverage:run]
branch = True
source =
    functoolsplus

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:

ignore_errors = True

[coverage:html]
directory = coverage_html_report
